--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -18,7 +18,10 @@
     "strict": true,
     "noUnusedLocals": true,
     "noUnusedParameters": true,
-    "noFallthroughCasesInSwitch": true
+    "noFallthroughCasesInSwitch": true,
+
+    /* Jest and RTL types */
+    "types": ["jest", "@testing-library/jest-dom"]
   },
   "include": ["src"]
 }
